@@ -1,0 +1,7 @@
+study	path	data_label	mime_type	size	sha1
+BSTUDY	file:/share/fs/v000.cel	foobar-00	x-vl/affymetrix-cel	8989	SHA1SHA1
+BSTUDY	file:/share/fs/v001.cel	foobar-01	x-vl/affymetrix-cel	8989	SHA1SHA1
+BSTUDY	file:/share/fs/v002.cel	foobar-02	x-vl/affymetrix-cel	8989	SHA1SHA1
+BSTUDY	file:/share/fs/v003.cel	foobar-03	x-vl/affymetrix-cel	8989	SHA1SHA1
+BSTUDY	file:/share/fs/v004.cel	foobar-04	x-vl/affymetrix-cel	8989	SHA1SHA1
+BSTUDY	file:/share/fs/v005.cel	foobar-05	x-vl/affymetrix-cel	8989	SHA1SHA1
