@@ -137,6 +137,7 @@ import bl.vl.app.importer.dna_sample
 import bl.vl.app.importer.titer_plate
 import bl.vl.app.importer.plate_well
 import bl.vl.app.importer.data_sample
+import bl.vl.app.importer.data_object
 
 
 class App(object):
@@ -148,6 +149,7 @@ class App(object):
     bl.vl.app.importer.titer_plate.do_register(self.supported_submodules)
     bl.vl.app.importer.plate_well.do_register(self.supported_submodules)
     bl.vl.app.importer.data_sample.do_register(self.supported_submodules)
+    bl.vl.app.importer.data_object.do_register(self.supported_submodules)
 
   def make_parser(self):
     parser = argparse.ArgumentParser(description="A magic importer")
