@@ -1,3 +1,9 @@
+2011-05-08    <zag@manzanillo>
+
+	* bl/vl/sample/kb/drivers/omero/data_object.py
+	(DataObject.__init__): added support for proxy propagation. This
+	should be fixed in a systematic way.
+
 2011-05-05    <zag@manzanillo>
 
 	* bl/vl/app/importer/plate_well.py (Recorder): Added prefetching support.
